Finalize core logic

--- a/.env-dev
+++ b/.env-dev
@@ -1,3 +1,4 @@
 MONGO_URI='mongodb://root:toor@127.0.0.1/contracts_scan?retryWrites=true&w=1'
 # 15*60 - 15 mins
 QUEUE_ITEM_VISIBILITY=900
+PORT=3333
