--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 MONGO_URI='mongodb://root:toor@127.0.0.1/contracts_scan?retryWrites=true&w=1'
 # 15*60 - 15 mins
 QUEUE_ITEM_VISIBILITY=900
+# In bytes 1048576 - 1MB
+MAX_SOURCE_CODE_SIZE_LIMIT=1048576
 PORT=3333
