--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
     "mongodb": "^4.7.0",
     "mongoose": "^6.3.6",
     "multer-gridfs-storage": "^5.0.2"
+  },
+  "devDependencies": {
+    "axios": "^0.27.2",
+    "form-data": "^4.0.0"
   }
 }
