--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "gridfs-stream": "^1.1.1",
     "mongodb": "^4.7.0",
     "mongoose": "^6.3.6",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "axios": "^0.27.2",
